<resources>
    <string name="app_name">Omni</string>
    <string name="north">N</string>
    <string name="northeast">NE</string>
    <string name="northwest">NW</string>
    <string name="south">S</string>
    <string name="southeast">SE</string>
    <string name="southwest">SW</string>
    <string name="west">W</string>
    <string name="east">E</string>
    <string name="direction_1" translatable="false">0</string>
    <string name="direction_2" translatable="false">30</string>
    <string name="direction_3" translatable="false">60</string>
    <string name="direction_4" translatable="false">90</string>
    <string name="direction_5" translatable="false">120</string>
    <string name="direction_6" translatable="false">150</string>
    <string name="direction_7" translatable="false">180</string>
    <string name="direction_8" translatable="false">210</string>
    <string name="direction_9" translatable="false">240</string>
    <string name="direction_10" translatable="false">270</string>
    <string name="direction_11" translatable="false">300</string>
    <string name="direction_12" translatable="false">330</string>
    <string name="degree_format" translatable="false">" %1$s°"</string>
    <string name="degree_format_tile" translatable="false">"%1$s°"</string>
    <string name="longitude_desc">N</string>
    <string name="latitude_desc">E</string>
    <string name="unknown_location">Unknown location</string>
    <string name="perm_dialog_title">Location</string>
    <string name="decline">No</string>
    <string name="accept">Yes</string>
    <string name="perm_dialog_text">Toolbox requires your location data in order to display latitude and longitude. That may requires communications with your location provider\'s server. If you select \"no\", you still can use the basic functionalities of compass.</string>
    <string name="position_default_text" translatable="false">__.____°</string>
    <string name="altitude_default_text" translatable="false">___</string>
    <string name="altitude_unit_meter" translatable="false">m</string>
    <string name="altitude_unit_foot" translatable="false">ft</string>
    <string name="settings">Settings</string>
    <string name="author" translatable="false">123Duo3, AkaneTan</string>
    <string name="settings_author_name">Author</string>
    <string name="settings_upstream">Original app</string>
    <string name="settings_upstream_desc">Omni by AkaneTan and contributors. This build is a fork.</string>
    <string name="settings_fork">This fork</string>
    <string name="settings_update">Check for updates</string>
    <string name="settings_update_desc">Looks at this fork\'s GitHub releases</string>
    <string name="update_checking">Checking…</string>
    <string name="update_up_to_date">You have the latest version</string>
    <string name="update_available">Version %1$s is available</string>
    <string name="update_failed">Could not check: %1$s</string>
    <string name="update_downloading">Downloading… %1$d%%</string>
    <string name="update_install_failed">Update could not be installed</string>
    <string name="update_permission_title">Permission needed</string>
    <string name="update_permission_text">Android needs your permission for this app to install updates. Grant "install unknown apps" on the next screen, then try again.</string>
    <string name="update_dialog_install">Install</string>
    <string name="update_notes_title">Updated to %1$s</string>
    <string name="settings_fork_desc" translatable="false">Modified build maintained by ItzSkyeYT</string>
    <string name="settings_unknown_version">Unknown version</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="warning_dialog_text">It looks like your device doesn\'t have an available rotation vector sensor. The compass feature of toolbox will be disabled. However, you still can use the location feature.</string>
    <string name="dismiss">Dismiss</string>
    <string name="delimiter">,\ </string>
    <string name="location_format">%1$s%2$s%3$s%4$s%5$s%6$s%7$s%8$s%9$s</string>
    <string name="compass">Compass</string>
    <string name="compass_tile_notification_channel">Compass Notification</string>
    <string name="compass_notification_title">Compass running</string>
    <string name="compass_notification_label">Long click to disable this notification</string>
    <string name="about">About</string>
    <string name="settings_coordinate_format">Coordinate format</string>
    <string name="settings_coordinate_format_desc">Degree, minute, second (DMS)</string>
    <string name="settings_true_north">Use true north</string>
    <string name="settings_altitude_unit">Units</string>
    <string name="settings_altitude_unit_desc">Altitude readout</string>
    <string name="unit_metric">Metric</string>
    <string name="unit_imperial">Imperial</string>
    <string name="universal">Universal</string>
    <string name="settings_haptic_feedback">Haptic feedback</string>
    <string name="cm" translatable="false">cm</string>
    <string name="in" translatable="false">in</string>
    <string name="switch_swipe_hint">Swipe left or right to switch tools</string>
    <string name="flashlight_warn">Higher brightness may cause burns</string>
    <string name="battery_percent" translatable="false">%1$d%%</string>
    <string name="dms_format" translatable="false">%1$s° %2$s\' %3$s\'\'</string>
    <string name="compass_prompt_title">Notification</string>
    <string name="compass_prompt_desc">Toolbox requires notification permission in order to post notification for the compass QS tile to survive. If you select no, compass QS tile may not work as expected.</string>
    <string name="shortcut_short_label_compass">Compass</string>
    <string name="shortcut_long_label_compass">Compass</string>
    <string name="shortcut_short_label_spirit_level">Spirit level</string>
    <string name="shortcut_long_label_spirit_level">Spirit level</string>
    <string name="shortcut_short_label_ruler">Ruler</string>
    <string name="shortcut_long_label_ruler">Ruler</string>
    <string name="shortcut_short_label_flashlight">Flashlight</string>
    <string name="shortcut_long_label_flashlight">Flashlight</string>
    <string name="flashlight_dialog_title">Warning</string>
    <string name="flashlight_dialog_text">Increasing the flashlight brightness to 90% or higher may cause irreversible damage to the flashlight\'s light-emitting components. If you still want to proceed, press "Yes".</string>
</resources>