<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/compass"
        android:layout="@layout/preference_cate">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_coordinate_format"
            android:key="coordinate"
            android:title="@string/settings_coordinate_format"
            android:summary="@string/settings_coordinate_format_desc"
            android:layout="@layout/preference_basic_top"
            android:widgetLayout="@layout/preference_switch_widget"
            />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_true_north"
            android:key="true_north"
            android:title="@string/settings_true_north"
            android:layout="@layout/preference_basic_mid"
            android:widgetLayout="@layout/preference_switch_widget"
            />

        <uk.akane.omni.ui.components.SegmentedPreference
            android:icon="@drawable/ic_barometer"
            android:key="altitude_unit"
            android:title="@string/settings_altitude_unit"
            android:summary="@string/settings_altitude_unit_desc"
            android:layout="@layout/preference_segmented_down"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/universal"
        android:layout="@layout/preference_cate">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_vibration"
            android:key="haptic_feedback"
            android:title="@string/settings_haptic_feedback"
            android:layout="@layout/preference_basic_single"
            android:widgetLayout="@layout/preference_switch_widget"
            app:defaultValue="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about"
        android:layout="@layout/preference_cate">

        <Preference
            android:icon="@drawable/ic_omni"
            android:key="version"
            android:layout="@layout/preference_basic_top"
            android:summary="@string/settings_unknown_version"
            android:title="@string/app_name" />

        <Preference
            android:icon="@drawable/ic_group"
            android:key="author"
            android:layout="@layout/preference_basic_mid"
            android:summary="@string/author"
            android:title="@string/settings_author_name" />

        <Preference
            android:icon="@drawable/ic_omni"
            android:key="upstream"
            android:layout="@layout/preference_basic_mid"
            android:summary="@string/settings_upstream_desc"
            android:title="@string/settings_upstream" />

        <Preference
            android:icon="@drawable/ic_conversion_path"
            android:key="fork"
            android:layout="@layout/preference_basic_down"
            android:summary="@string/settings_fork_desc"
            android:title="@string/settings_fork" />

    </PreferenceCategory>

</PreferenceScreen>